@@ -245,4 +245,5 @@ Jeroen Ooms for Rtools40 and FreeType help.
 Yohann Demont for Shiny code, suggestions, and testing.  
 Joshua Ulrich for a lot of help with the Github migration.  
 Xavier Fernandez i Marin for help debugging the build.
+George Helffrich, draping code.
 
