@@ -50,12 +50,9 @@ terrain3d(x, y, z, ..., normal_x = NULL, normal_y = NULL, normal_z = NULL)
   \code{surface3d} and \code{terrain3d} are synonyms.
 }
 \examples{
-
 #
 # volcano example taken from "persp"
 #
-
-data(volcano)
 
 z <- 2 * volcano        # Exaggerate the relief
 
