@@ -34,8 +34,8 @@ setupKnitr(autoprint = TRUE)
 
 [pkgdown](https://pkgdown.r-lib.org/) is an R package that
 makes it easy to build a web site for your package.  However, the current version 1.6.1 on CRAN doesn't work so well for
-packages whose examples use RGL or other packages like [leaflet](http://rstudio.github.io/leaflet) that use
-[htmlwidgets](http://htmlwidgets.org/).  This document
+packages whose examples use RGL or other packages like [leaflet](http://rstudio.github.io/leaflet/) that use
+[htmlwidgets](http://www.htmlwidgets.org).  This document
 describes current progress in supporting both of these.
 
 The main problem for [pkgdown](https://pkgdown.r-lib.org/) support
