@@ -1232,6 +1232,8 @@ base graphics.
   - Changes have been made for compatibility with the 
     experimental Windows-UTF8 build of R.
   - Allowed infinite values for strip limits in filledContour3d.
+  - Added drape3d(), to "drape" objects across a mesh.
+    (Contributed by George Helffrich.)
   - Setting material property point_antialias = TRUE now
     gives round points in rglwidget() displays.
   - The reuse argument in rglwidget() is no longer used.
